kube/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  type: LoadBalancer
  externalIPs:
    - 192.168.10.10
  ports:
    - port: 9001
  selector:
    app: backend
