kube/drawing-renderer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drawing-renderer-service
  labels:
    app: drawing-renderer
spec:
  type: NodePort
  ports:
    - port: 8889
      targetPort: 80
  selector:
    app: drawing-renderer
